# logit-diff-lens

./: .gitignore  LICENSE  README.md  pyproject.toml  qwen_analysis.ipynb  test.py  test_2.py
configs/em_qwen/: README.md  qwen_model_names.json
configs/pythia/: pythia_model_names.json
configs/quant_configs/: bnb_configs.py
configs/quant_llama/: README.md  llama_model_names.json
configs/streaming_prompt_comparison/: nq_qwen_template.json
datasets/: em_eval_v1.jsonl  logit_prisms_data.jsonl  logit_prisms_data_first9.jsonl
datasets/base_data/: curated_em_mix_37.jsonl  curated_em_mix_60.jsonl  em_qwen_prompts_10.jsonl  em_qwen_prompts_20.jsonl  llama_dataset_17.jsonl  translation_tasks.py  translation_tasks_tf.jsonl  translation_tasks_tf.summary.json
datasets/qwen_generated_datasets/: chat_template_risky_10.jsonl  chat_template_risky_10_grouped_rows.jsonl  chat_template_risky_10_readable.txt  logit_prisms_teacher_forced_grouped.jsonl  logit_prisms_teacher_forced_grouped_clean.jsonl  prompt_5_jaccard_heatmap.html  qwen_risky_neutral_chat_template.jsonl
logit_diff_lens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logit_diff_lens/adl/: __init__.py  adl_hidden_batched.py  apply_adl_batched.py  collect_adl_hidden_batched.py
logit_diff_lens/ldl/: __init__.py  apply_ldl_batched.py  apply_ldl_prompt.py  apply_logit_lens_prompt.py  collect_ldl_logits_batched.py  logit_lens_batched.py  logit_lens_prompt.py
logit_diff_lens/plotting/: __init__.py  adl_plotter.py  ldl_plotter.py  logit_diff_plotter.py  logit_lens_plotter.py
tests/: test_activation_collector.py  test_activation_dataset_analysis.py  test_latent_shift_analysis.py  test_logit_prism.py  test_representation_analysis.py  test_research_comparison.py  test_research_plots.py
ucloud_results/: prompt_lens_correlations.tex  prompt_lens_summaries.tex  ucloud_interp.tex
(+174 files in other folders)
