[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logit-diff-lens"
version = "0.0.1"
description = "LogitDiff: logit lens diffing for transformers (Python 3.10.12)"
authors = [{ name = "Annemette Brok Pirchert" }]

dependencies = [
  "torch",
  "transformers",
  "accelerate",
  "bitsandbytes",
  "kernel",
  "peft",
  "scipy",
  "pandas",
  "numpy",
  "matplotlib",
  "seaborn",
  "colorcet",
  "plotly",
  "kaleido",
  "tqdm",
  "ipywidgets",
  "python-dotenv"
]