[project]
name = "logit-diff-lens"
version = "0.0.1"
description = "LogitDiff: logit lens diffing for transformers (Python 3.10.12)"
authors = [{ name = "Annemette Brok Pirchert" }]

dependencies = [
  "torch",
  "transformers",
  "accelerate",
  "bitsandbytes",
  "peft",
  "openai",
  "loguru",
  "omegaconf",
  "datasets",
  "scipy",
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "colorcet",
  "plotly",
  "kaleido",
  "tqdm",
  "ipywidgets",
  "python-dotenv",
  "loguru",
  "nnsight",
  "notebook"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["logit_diff_lens*", "diffing*"]
